--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Mon Site Web</h1>
         <nav>
             <ul>
-                <li><a href="https://Gabriel-Frauchot.github.io/">Accueil</a></li>
+                <li><a href="https://Frauchot.github.io/">Accueil</a></li>
                 <li><a href="#">À Propos</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact</a></li>
